revert changes of test classes