@@ -31,7 +31,6 @@ class AlertRaisingServiceTest {
     @Mock private AlertRuleRepository alertRuleRepository;
     @Mock private TxnRepository txnRepository;
     @Mock private DataSource dataSource;
-    @Mock private WatchlistScreeningService watchlistScreeningService;
 
 
     @Mock private Connection raiseConn;
@@ -68,12 +67,12 @@ class AlertRaisingServiceTest {
         when(txnRepository.findRecentByAccount(anyInt(), anyInt(), anyInt())).thenReturn(List.of());
         when(raiseStmt.getLong(4)).thenReturn(100L);
 
-        service = new RuleEngineService(alertRuleRepository, txnRepository, dataSource, List.of(impl), watchlistScreeningService);
+        service = new RuleEngineService(alertRuleRepository, txnRepository, dataSource, List.of(impl));
 
         List<Long> result = service.screenTransaction(txn, account);
 
         assertEquals(1, result.size());
-        assertEquals(100L, result.getFirst());
+        assertEquals(100L, result.get(0));
 
         verify(raiseStmt).execute();
     }
@@ -91,7 +90,7 @@ class AlertRaisingServiceTest {
         when(txnRepository.findRecentByAccount(anyInt(), anyInt(), anyInt())).thenReturn(List.of());
         when(raiseStmt.getLong(4)).thenReturn(-1L); // DUPLICATE
 
-        service = new RuleEngineService(alertRuleRepository, txnRepository, dataSource, List.of(impl), watchlistScreeningService);
+        service = new RuleEngineService(alertRuleRepository, txnRepository, dataSource, List.of(impl));
 
         List<Long> result = service.screenTransaction(txn, account);
 
@@ -108,7 +107,7 @@ class AlertRaisingServiceTest {
         when(alertRuleRepository.findByIsActiveTrue()).thenReturn(List.of());
         when(txnRepository.findRecentByAccount(anyInt(), anyInt(), anyInt())).thenReturn(List.of());
 
-        service = new RuleEngineService(alertRuleRepository, txnRepository, dataSource, List.of(), watchlistScreeningService);
+        service = new RuleEngineService(alertRuleRepository, txnRepository, dataSource, List.of());
 
         service.screenTransaction(txn, account);
 
